--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default navbar-fixed-top" style="padding: 1em 0">
   <div class="container">
     <div class="navbar-header">
-      <img id="logo-img" src="" style="max-width: 40px; height: auto" class="img-responsive" alt=""/>
+      <img id="logo-img" src="http://pbl2014.github.io/detector-site/images/logo.png" style="max-width: 40px; height: auto" class="img-responsive" alt=""/>
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
