--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script>
   function autoLink() {
-    location.href="./document/";
+    location.href="./document/about";
   }
   setTimeout("autoLink()",10);
 </script>
