--- a/document/about.html
+++ b/document/about.html
@@ -46,7 +46,25 @@
           <h3 id="dtm-title"></h3>
           <hr/>
           <!-- content -->
-          <p>okweaopdkoapwopawkdpokawpoodpkaopodpaopdka</p>
+          <h3>Detectorとは<h3>
+          <p><font size="3">オープンソースライブラリーOpenCVを利用して、大量な画像を分析し、RGB特徴を抽出する。
+          	画像特徴より、重複な画像を検出するライブラリーです。</font>
+          </p>
+          <br>
+          <h3>特徴<h3>
+          <p><font size="3">
+          🌟画像ファイルについて解析し、各画像の特徴抽出<br>
+          🌟フォルダを指定すれば、その中に類似画像抽出<br>
+          🌟オープンソースおよびオープンライブラリーの形式で提供する<br>
+          🌟マルチプラットフォーム対応<br>
+          🌟大量の画像ファイルを一括で処理できる
+          🌟像処理時間の最適化を目指す
+          </font>
+          </p>
+          <br>
+          <h3>ライブラリー構造<h3>
+          <img id="slider-01" src="http://pbl2014.github.io/detector-site/images/slider01.jpg" style="max-width: auto; height: auto" class="" alt=""/>
+          <img id="slider-01" src="http://pbl2014.github.io/detector-site/images/slider02.jpg" style="max-width: auto; height: auto" class="" alt=""/>
         </div>
       </div>
 
