--- a/document/license.html
+++ b/document/license.html
@@ -46,7 +46,43 @@
           <h3 id="dtm-title"></h3>
           <hr/>
           <!-- content -->
-          <p>okweaopdkoapwopawkdpokawpoodpkaopodpaopdka</p>
+          <p align="center">
+          	<font size="3">          		
+              By downloading, copying, installing or using the software you agree to this license.<br>
+              If you do not agree to this license, do not download, install,<br>
+              copy or use the software.<br>
+              <br>
+              <br>
+                                        License Agreement<br>
+                             For Open Source Computer Vision Library<br>
+                                     (3-clause BSD License)<br>
+<br>
+              Redistribution and use in source and binary forms, with or without modification,<br>
+              are permitted provided that the following conditions are met:<br>
+              <br>
+                * Redistributions of source code must retain the above copyright notice,<br>
+                  this list of conditions and the following disclaimer.<br>
+              <br>
+                * Redistributions in binary form must reproduce the above copyright notice,<br>
+                  this list of conditions and the following disclaimer in the documentation<br>
+                  and/or other materials provided with the distribution.<br>
+              <br>
+                * Neither the names of the copyright holders nor the names of the contributors<br>
+                  may be used to endorse or promote products derived from this software<br>
+                  without specific prior written permission.<br>
+              <br>
+              This software is provided by the copyright holders and contributors "as is" and<br>
+              any express or implied warranties, including, but not limited to, the implied<br>
+              warranties of merchantability and fitness for a particular purpose are disclaimed.<br>
+              In no event shall copyright holders or contributors be liable for any direct,<br>
+              indirect, incidental, special, exemplary, or consequential damages<br>
+              (including, but not limited to, procurement of substitute goods or services;<br>
+              loss of use, data, or profits; or business interruption) however caused<br>
+              and on any theory of liability, whether in contract, strict liability,<br>
+              or tort (including negligence or otherwise) arising in any way out of<br>
+              the use of this software, even if advised of the possibility of such damage.
+          	</font>
+          </p>
         </div>
       </div>
 
